--- a/content/docs/components.mdx
+++ b/content/docs/components.mdx
@@ -400,7 +400,7 @@ Example usage of Wrapped Code Block:
 
 Here's a linked card example:
 
-<LinkedCard href="/docs/installation">
+<LinkedCard href="/v1.0/installation">
   <h3>Getting Started →</h3>
   <p>Learn how to get started with our documentation components.</p>
 </LinkedCard>
@@ -408,7 +408,7 @@ Here's a linked card example:
 Create linked cards using:
 
 ```tsx
-<LinkedCard href="/docs/getting-started">
+<LinkedCard href="/v1.0/getting-started">
   <h3>Getting Started →</h3>
   <p>Learn how to get started with our documentation components.</p>
 </LinkedCard>
