--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -84,7 +84,7 @@ bun run dev
 
 ### Directory Structure
 
-<Files defaultValue="src/app/docs/[[...slug]]">
+<Files defaultValue="src/app/v1.0/[[...slug]]">
   <Folder name="content" defaultOpen>
     <Folder name="docs">
       <File name="index.mdx" />
