--- a/content/docs/installation.mdx
+++ b/content/docs/installation.mdx
@@ -85,6 +85,6 @@ You can customize the site by editing `src/config/site.config.ts`. This includes
 ## Next Steps
 
 You can start adding your own content by:
-1. Adding MDX files in the `content/docs` directory
+1. Adding MDX files in the `content/v1.0` directory
 2. Customizing the theme in `tailwind.config.ts`
 3. Modifying site configuration in `src/config/site.config.ts`
