--- a/content/docs/contribute.mdx
+++ b/content/docs/contribute.mdx
@@ -61,7 +61,7 @@ bun run dev
 
 Before making changes, familiarize yourself with the project structure:
 
-- `content/docs/` - MDX documentation files
+- `content/v1.0/` - MDX documentation files
 - `src/app/` - Next.js application routes
 - `src/components/` - Reusable React components
 - `src/config/` - Site configuration files
