--- a/content/guide/introduction/features.mdx
+++ b/content/guide/introduction/features.mdx
@@ -1,5 +1,5 @@
 ---
-title: Installation
+title: Features
 description: How to get started with this Next.js MDX template
 published: true
 toc:
@@ -85,6 +85,6 @@ You can customize the site by editing `src/config/site.config.ts`. This includes
 ## Next Steps
 
 You can start adding your own content by:
-1. Adding MDX files in the `content/v1.0` directory
+1. Adding MDX files in the `content/guide` directory
 2. Customizing the theme in `tailwind.config.ts`
 3. Modifying site configuration in `src/config/site.config.ts`
