--- a/content/guide/introduction/what-is-plura.mdx
+++ b/content/guide/introduction/what-is-plura.mdx
@@ -1,90 +1,64 @@
 ---
-title: What is You?
-description: How to get started with this Next.js MDX template
+title: "What is Plura?"
+description: "Discover Plura: The revolutionary AI-powered SaaS platform for intelligent communication"
 published: true
 toc:
   visible: true
-date: 2024-01-06
+date: 2024-01-07
 ---
 
-## Quick Start
+## This is Plura ! 
 
-This is a ready-to-use template that comes with everything you need to build a modern documentation site or blog using Next.js 15, MDX, Velite, and Shadcn UI components.
+Plura is a cutting-edge SaaS platform that redefines AI-powered communication and interaction. Our innovative solution empowers users to create intelligent "brains" - custom AI agents that can be trained with specific information and connected across multiple communication channels.
+
+## Plura Model
 
 <Steps>
-
-<Step>
-Clone the repository
-
-```bash
-git clone https://github.com/rudrodip/mext15.git my-docs
-cd my-docs
-```
-</Step>
-
-<Step>
-Install dependencies
-
-```bash
-bun install
-```
-</Step>
-
-<Step>
-Start the development server
-
-```bash
-bun run dev
-```
-</Step>
-
+  <Step title="Create Your AI Brain">
+    <h3>Start by defining and training your custom AI agent with your specific knowledge base.</h3>
+  </Step>
+  <Step title="Connect Channels">
+    <h3>Integrate your AI brain with your preferred communication channels such as websites, WhatsApp, Discord, and more.</h3>
+  </Step>
+  <Step title="Interact and Refine">
+    <h3>Begin interacting with your AI and refine its responses based on real-world usage.</h3>
+  </Step>
 </Steps>
 
-## What's Included
+## Key Features
 
-This template comes pre-configured with:
+Plura comes with the following key features:
 
-- **Next.js 15** - The React framework for production
-- **Velite** - Content management system
-- **MDX** - Write content with JSX components
-- **Shadcn UI** - Beautiful and customizable UI components
-- **Tailwind CSS** - Utility-first CSS framework
-- **TypeScript** - Type safety out of the box
+- 🔗 **Multi-Channel Connectivity** - Connect agents to websites, WhatsApp, Discord, and more
+- 🧠 **Custom AI Training** - Easily teach your AI agents with specific information
+- 💬 **Chat with Collections** - Interact with specific knowledge bases
+- 🏠 **Self Hostable** - Open source and easy to deploy locally
+- 🛠️ **Customization** - Tailor your AI agents to your specific needs
+- 📈 **Scalability** - Grow your AI capabilities as your needs evolve
 
-## Project Structure
+## Open Source Project
 
-The template follows a standard Next.js project structure with additional directories for content management:
+Plura is an open-source project, allowing for community contributions and customizations. The tech stack includes:
 
-<Files defaultValue="src/app">
-  <Folder name="content">
-    <File name="Your MDX content files" />
-  </Folder>
-  <Folder name="public">
-    <File name="Static assets" />
-  </Folder>
-  <Folder name="src">
-    <Folder name="app">
-      <File name="Next.js app router pages" />
-    </Folder>
-    <Folder name="components">
-      <File name="React components" />
-    </Folder>
-    <Folder name="config">
-      <File name="Site configuration" />
-    </Folder>
-    <Folder name="types">
-      <File name="TypeScript types" />
-    </Folder>
-  </Folder>
-</Files>
+- Frontend: React with Next.js
+- Backend: Node.js
+- Database: PostgreSQL
+- Redis instance (Upstash)
 
-## Configuration
-
-You can customize the site by editing `src/config/site.config.ts`. This includes site metadata, social links, and other configuration options.
+Here is the Plura repository at: [https://github.com/plura-ai/plura/](https://github.com/plura-ai/plura/)
 
 ## Next Steps
 
-You can start adding your own content by:
-1. Adding MDX files in the `content/guide` directory
-2. Customizing the theme in `tailwind.config.ts`
-3. Modifying site configuration in `src/config/site.config.ts`
+Here's how you can help Plura grow:
+
+1. Star the repository on GitHub
+2. Join our community and contribute to discussions
+3. Submit pull requests for new features or bug fixes
+4. Help improve documentation
+5. Share Plura with others who might benefit from it
+
+## 🤝 Contributing
+Contributions are very welcome! A contribution can be as small as a ⭐ or even finding and creating issues.
+
+- for joining our community, please Contact [Saidev Dhal](https://cal.com/saidevdhal)
+- for contributing to our code, please follow the contribution guidelines below
