--- a/content/guide/introduction/who-can-use-plura.mdx
+++ b/content/guide/introduction/who-can-use-plura.mdx
@@ -1,90 +1,65 @@
 ---
-title: Who can use it?
-description: How to get started with this Next.js MDX template
+title: "Who can use it?"
+description: "Discover the wide range of users who can benefit from Plura's AI-powered communication platform"
 published: true
 toc:
   visible: true
 date: 2024-01-06
 ---
 
-## Quick Start
+## Plura: AI for Everyone
 
-This is a ready-to-use template that comes with everything you need to build a modern documentation site or blog using Next.js 15, MDX, Velite, and Shadcn UI components.
+Plura is designed to be versatile and accessible, catering to a wide range of users across various industries and roles. Let's explore who can benefit from Plura's powerful AI-driven communication platform:
 
 <Steps>
-
-<Step>
-Clone the repository
-
-```bash
-git clone https://github.com/rudrodip/mext15.git my-docs
-cd my-docs
-```
-</Step>
-
-<Step>
-Install dependencies
-
-```bash
-bun install
-```
-</Step>
-
-<Step>
-Start the development server
-
-```bash
-bun run dev
-```
-</Step>
-
+  <Step title="Businesses and Organizations">
+    <h3>From startups to large enterprises</h3>
+    - Customer service teams
+    - Sales and marketing departments
+    - Human resources 
+    - IT helpdesks for internal support
+  </Step>
+  <Step title="Developers and Tech Enthusiasts">
+    <h3>Harness the power of AI in your projects and innovations.</h3>
+    - Open-source contributors
+    - AI researchers and students
+    - Hobbyist programmers
+    - Hackathon participants
+  </Step>
+  <Step title="Educational Institutions">
+    <h3>Enhance learning experiences with AI-powered assistance.</h3>
+    - Universities and colleges
+    - Online learning platforms
+    - Language learning apps
+    - Educational technology startups
+  </Step>
+  <Step title="Content Creators and Media">
+    <h3>Streamline content production and audience engagement.</h3>
+    - Bloggers and writers
+    - Podcasters
+    - YouTube creators
+    - Social media influencers
+  </Step>
 </Steps>
 
-## What's Included
 
-This template comes pre-configured with:
+Plura caters to users with varying levels of technical expertise:
 
-- **Next.js 15** - The React framework for production
-- **Velite** - Content management system
-- **MDX** - Write content with JSX components
-- **Shadcn UI** - Beautiful and customizable UI components
-- **Tailwind CSS** - Utility-first CSS framework
-- **TypeScript** - Type safety out of the box
+1. **Non-technical Users**: User-friendly interfaces for creating and managing AI agents without coding knowledge.
+2. **Intermediate Users**: Customization options using simple configuration files and templates.
+3. **Advanced Users**: Full access to the codebase for deep customizations and integrations.
 
-## Project Structure
+## Plura isn't just for businesses and organizations. Individuals can also leverage its power !
 
-The template follows a standard Next.js project structure with additional directories for content management:
 
-<Files defaultValue="src/app">
-  <Folder name="content">
-    <File name="Your MDX content files" />
-  </Folder>
-  <Folder name="public">
-    <File name="Static assets" />
-  </Folder>
-  <Folder name="src">
-    <Folder name="app">
-      <File name="Next.js app router pages" />
-    </Folder>
-    <Folder name="components">
-      <File name="React components" />
-    </Folder>
-    <Folder name="config">
-      <File name="Site configuration" />
-    </Folder>
-    <Folder name="types">
-      <File name="TypeScript types" />
-    </Folder>
-  </Folder>
-</Files>
+## Join the Plura Community
 
-## Configuration
+Ready to explore these features and revolutionize your AI-powered communication?
 
-You can customize the site by editing `src/config/site.config.ts`. This includes site metadata, social links, and other configuration options.
+1. Visit our [GitHub repository](https://github.com/plura-ai/plura/) to get started with the open-source version.
+2. Check out our documentation for detailed guides on each feature.
+3. Join our community forums to connect with other Plura users and developers.
 
-## Next Steps
+For joining to Collaborate, [connect with Saidev Dhal](https://devwtf.in/).
 
-You can start adding your own content by:
-1. Adding MDX files in the `content/guide` directory
-2. Customizing the theme in `tailwind.config.ts`
-3. Modifying site configuration in `src/config/site.config.ts`
+Plura is empowering users across the globe to harness the power of AI. Join us in shaping the future of intelligent communication!
