--- a/content/guide/index.mdx
+++ b/content/guide/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction
+title: Plura Guide
 description: A sleek and modern template for building documentation and blogs with Next.js 15, MDX, Velite, and Shadcn UI components
 published: true
 toc:
@@ -41,7 +41,7 @@ date: 2024-03-14
   </Card>
 </div>
 
-## Setup Guide
+### Setup Guide
 
 This is a ready-to-use template that comes with everything you need to build a modern documentation site or blog using Next.js 15, MDX, Velite, and Shadcn UI components.
 
