--- a/content/guide/introduction/ai-sdk/agents.mdx
+++ b/content/guide/introduction/ai-sdk/agents.mdx
@@ -1,5 +1,5 @@
 ---
-title: Installation
+title: Who can use it?
 description: How to get started with this Next.js MDX template
 published: true
 toc:
