--- a/content/guide/contribute/ai-sdk/chatbot.mdx
+++ b/content/guide/contribute/ai-sdk/chatbot.mdx
@@ -1,5 +1,5 @@
 ---
-title: What is You?
+title: Who can use it?
 description: How to get started with this Next.js MDX template
 published: true
 toc:
