--- a/content/guide/contribute/plura.mdx
+++ b/content/guide/contribute/plura.mdx
@@ -6,6 +6,7 @@ toc:
   visible: true
 date: 2024-01-06
 github: https://github.com/plura-ai
+contributors: https://api.github.com/repos/plura-ai/docs/contributors
 ---
 
 ## Quick Start
@@ -21,6 +22,7 @@ Clone the repository
 git clone https://github.com/rudrodip/mext15.git my-docs
 cd my-docs
 ```
+
 </Step>
 
 <Step>
@@ -29,6 +31,7 @@ Install dependencies
 ```bash
 bun install
 ```
+
 </Step>
 
 <Step>
@@ -37,6 +40,7 @@ Start the development server
 ```bash
 bun run dev
 ```
+
 </Step>
 
 </Steps>
@@ -86,6 +90,7 @@ You can customize the site by editing `src/config/site.config.ts`. This includes
 ## Next Steps
 
 You can start adding your own content by:
+
 1. Adding MDX files in the `content/guide` directory
 2. Customizing the theme in `tailwind.config.ts`
 3. Modifying site configuration in `src/config/site.config.ts`
