--- a/content/contributors/index.mdx
+++ b/content/contributors/index.mdx
@@ -1,28 +1,38 @@
 
 export const contributors = [
+  { name: "Alice Johnson", role: "Technical Writer", avatar: "https://github.com/shadcn.png" },
+  { name: "Bob Williams", role: "Docs Maintainer", avatar: "https://github.com/shadcn.png" },
+  { name: "Charlie Brown", role: "API Documentation Lead", avatar: "https://github.com/shadcn.png" },
+  { name: "David Wilson", role: "Content Strategist", avatar: "https://github.com/shadcn.png" },
+  { name: "Emma Davis", role: "Markdown Specialist", avatar: "https://github.com/shadcn.png" },
+  { name: "Frank Miller", role: "Docs Automation Engineer", avatar: "https://github.com/shadcn.png" },
   { name: "John Doe", role: "Frontend Engineer", avatar: "https://github.com/shadcn.png" },
   { name: "Jane Smith", role: "Backend Engineer", avatar: "https://github.com/shadcn.png" },
-  { name: "Alice Brown", role: "UI/UX Designer", avatar: "https://github.com/shadcn.png" },
-  { name: "Michael Lee", role: "Full Stack Developer", avatar: "https://github.com/shadcn.png" },
-  { name: "Sophia Patel", role: "Technical Writer", avatar: "https://github.com/shadcn.png" }
 ];
 
-<div>
-  ### Contributors
+export const maxVisibleContributors = 3;
 
-  <div className="grid grid-cols-1 gap-2">
-    {contributors.map((contributor, index) => (
-      <Card key={index} className="flex flex-row items-center justify-between p-4">
-        <div className="text-left">
-          <p className="text-sm font-semibold">{contributor.name}</p>
-          <p className="text-xs text-gray-500">{contributor.role}</p>
+
+<div className="flex flex-col gap-3 p-3">
+    <CardDescription>Contributors</CardDescription>
+
+    <div className="grid grid-cols-1 gap-2">
+      {contributors.slice(0, maxVisibleContributors).map((contributor, index) => (
+        <Card key={index} className="flex flex-row items-center justify-between py-2 px-3">
+          <div className="text-left flex flex-col gap-1 p-1 w-fit">
+            <CardTitle className="text-sm">{contributor.name}</CardTitle>
+            <CardDescription className="text-xs">{contributor.role}</CardDescription>
+          </div>
+          <Avatar className="w-8 h-8">
+            <AvatarImage src={contributor.avatar} alt={contributor.name} />
+            <AvatarFallback>{contributor.name[0]}</AvatarFallback>
+          </Avatar>
+        </Card>
+      ))}
+      {contributors.length > maxVisibleContributors && (
+        <div className="text-sm text-muted-foreground text-center">
+          +{contributors.length - maxVisibleContributors} more
         </div>
-        <Avatar className="w-8 h-8">
-          <AvatarImage src={contributor.avatar} alt={contributor.name} />
-          <AvatarFallback>{contributor.name[0]}</AvatarFallback>
-        </Avatar>
-      </Card>
-    ))}
-  </div>
+      )}
+    </div>
 </div>
-
